# Ardon-R2

./: .editorconfig  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON_TESTS.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONS.md  R2-Library-Architecture.md  README.md  SECURITY.md  TESTCASES.md  VISION.md  llms.txt  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
bench/r_vs_r2/: README.md  RUN_THIS.md  accuracy.R  accuracy.r2  fusion_bench.R  fusion_bench.r2  math_jit.R  math_jit.r2  matmul_probe.r2  perf_probe.r2  performance.R  performance.r2  run.ps1  run.sh  simd_probe.r2
crates/r2-arrow/: Cargo.toml
crates/r2-arrow/examples/: ooc.rs
crates/r2-arrow/src/: lib.rs
crates/r2-base/: Cargo.toml
crates/r2-base/datasets/: airquality.r2d  faithful.r2d  iris.r2d  mtcars.r2d  tooth_growth.r2d
crates/r2-base/src/: lib.rs  linalg_ops.rs  r2d.rs
crates/r2-base/tests/: gen_datasets.rs
crates/r2-console/: Cargo.toml
crates/r2-console/src/: lib.rs
crates/r2-data/: Cargo.toml
crates/r2-data/src/: apply.rs  bind.rs  clean.rs  concat.rs  dplyr.rs  lib.rs  meta.rs  order.rs  summary.rs  table.rs
crates/r2-engine/: Cargo.toml
crates/r2-engine/examples/: bench_jit.rs
crates/r2-engine/src/: formula.rs  lib.rs  na_bitmap.rs  registry.rs
crates/r2-engine/src/builtins/: core.rs  data.rs  data_apply.rs  graphics.rs  io.rs  misc.rs  ml.rs  ml_data.rs  mod.rs  stats.rs  strings.rs  sys_models.rs
crates/r2-engine/tests/: linalg_solve_det.rs  lm_coef_pvalues.rs  nse_formula_aggregate.rs  nse_subset_transform.rs  scalar_fusion.rs
crates/r2-graphics/: Cargo.toml
crates/r2-graphics/src/: colors.rs  device.rs  lib.rs  overlays.rs  params.rs  plots.rs  server.rs
crates/r2-gui/: Cargo.toml  build.rs
crates/r2-gui/src/: app.rs  console.rs  editor.rs  main.rs  menubar.rs  plotpane.rs  settings.rs
crates/r2-io/: Cargo.toml
crates/r2-io/src/: lib.rs
crates/r2-ir/: Cargo.toml
crates/r2-ir/src/: lib.rs
crates/r2-jit/: Cargo.toml
crates/r2-jit/src/: lib.rs
crates/r2-kernel/: Cargo.toml
crates/r2-kernel/src/: lib.rs
crates/r2-linalg/: Cargo.toml
crates/r2-linalg/examples/: bench_dgemm.rs
crates/r2-linalg/src/: blas_abi.rs  blas_dispatch.rs  decomp.rs  level1.rs  level2.rs  level3.rs  lib.rs  solve.rs
crates/r2-memory/: Cargo.toml
crates/r2-memory/examples/: pool_probe.rs
crates/r2-memory/src/: lib.rs
crates/r2-ml/: Cargo.toml
crates/r2-ml/src/: data.rs  dispatch.rs  lib.rs  tree.rs
crates/r2-ml/src/dispatch/: mod.rs  trees.rs
crates/r2-oracle/: Cargo.toml
crates/r2-oracle/src/: lib.rs
crates/r2-parser/: Cargo.toml
crates/r2-parser/src/: lexer.rs  lib.rs  parser.rs
crates/r2-pkg/: Cargo.toml
crates/r2-pkg/src/: lib.rs
crates/r2-repl/: Cargo.toml  build.rs
crates/r2-repl/src/: main.rs
crates/r2-stats/: Cargo.toml
crates/r2-stats/src/: dist.rs  htest.rs  lib.rs  mixed.rs  models.rs  multivariate.rs  rng.rs  summary.rs  time.rs
crates/r2-stats/src/multivariate/: manova.rs  mod.rs
crates/r2-stats/src/time/: hindu.rs  mod.rs
crates/r2-strings/: Cargo.toml
crates/r2-strings/src/: lib.rs
crates/r2-types/: Cargo.toml
crates/r2-types/src/: infer.rs  lib.rs
crates/r2-ui/: Cargo.toml  README.md
crates/r2-ui/examples/: cell_grid_demo.rs  console_demo.rs  hello_window.rs  mdi_demo.rs
crates/r2-ui/src/: app.rs  context_menu.rs  event.rs  graph.rs  grid.rs  input.rs  layout.rs  lib.rs  mdi.rs  menu.rs  render.rs  scrollbar.rs  svg_text.rs  theme.rs  window.rs
crates/r2-utils/: Cargo.toml
crates/r2-utils/src/: lib.rs
docs/: ANDROID_PORT.md  ARCHITECTURE.md  BIG_FILE_AUDIT.md  BLAS_DISPATCH.md  KNOWN_LIMITATIONS.md  MOBILE_PORTING.md  R2_GRAPHICS_TODO.md  R2_SESSION_B_MULTI_DEVICE.md  R2_UI_FRAMEWORK.md  R2project_status_report.md
installer/: BUILD_INSTALLER.md  R2.iss
packaging/linux/: Ardon-R2.desktop  README-FIRST.txt
packaging/macos/: Info.plist.in  README-FIRST.txt
samples/: accuracy_R.r  accuracy_R2.r  bench_jit.r  demo_basics.r  demo_benchmark.r  demo_graphics.r  demo_ml.r  install_mymath.bat  test_acf_deterministic.r2  test_addon_install.r2  test_dates.r2  test_hnc.r2  test_hotelling_accuracy.r2  test_install_packages.r2  test_loop_assign.r2  test_manova_accuracy.r2  test_parallelism.r  test_plot_png.r2  test_rnorm_named.r2  test_tithi_accuracy.r2  test_ts.r2  test_ts_aggregate_hindu.r2  test_ts_analytics.r2  test_v0_2_2.r2  test_xts.r2  user_lm.r
samples/example-r2-package/: package.r2
samples/example-r2-package/R/: helpers.r2
samples/mymath/R2/: functions.r
