[package]
name = "r2-repl"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "r2"
path = "src/main.rs"

[dependencies]
r2-types = { path = "../r2-types" }
r2-parser = { path = "../r2-parser" }
r2-engine = { path = "../r2-engine" }
# ctrlc: tiny cross-platform SIGINT handler. Pure-Rust, no transitive
# dependencies, ~3KB compiled. Used to wire Ctrl+C to the engine's
# interrupt flag so users can abort runaway evaluations and return to
# the R2> prompt without killing the process. Phase R.M.2.
ctrlc = { version = "3", default-features = false }

# build.rs converts assets/logo.png → multi-res ICO and embeds it as the
# Windows exe icon. Build-only deps; no impact on the runtime binary.
[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico   = "0.4"
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
